--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <maven.compiler.target>1.7</maven.compiler.target>
     <lwjgl.version>3.3.1</lwjgl.version>
     <joml.version>1.10.4</joml.version>
-    <lwjgl.natives>natives-windows</lwjgl.natives>
+    <lwjgl.natives>natives-linux</lwjgl.natives>
   </properties>
 
   <repositories>
@@ -380,11 +380,6 @@
       <groupId>org.joml</groupId>
       <artifactId>joml</artifactId>
       <version>${joml.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.orange451</groupId>
-      <artifactId>LWJGUI</artifactId>
-      <version>pre-mt</version>
     </dependency>
   </dependencies>
 
